<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/once_time"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_long"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_once_time"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_short"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_once_time"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/repeat_continuous"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_long"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_continuous"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_short"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_continuous"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/repeat_continuous_custom_interval"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_long"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_continuous_custom_interval"
                app:marqueeview_item_distance="50dp"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_short"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_continuous_custom_interval"
                app:marqueeview_item_distance="30dp"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/repeat_always_show"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_long"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_always_show"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_stay_time_scroll_finished="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_short"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_always_show"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_stay_time_scroll_finished="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/repeat_always_show_once_time"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_long"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_always_show_once_time"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_stay_time_scroll_finished="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.hpx.widget.marqueeview.MarqueeView
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_marquee_view_bg"
                app:marqueeview_content="@string/marquee_view_content_short"
                app:marqueeview_text_color="@color/white"
                app:marqueeview_text_start_location_distance="0"
                app:marqueeview_repeat_type="repeat_always_show_once_time"
                app:marqueeview_stay_time_before_scroll="3000"
                app:marqueeview_stay_time_scroll_finished="3000"
                app:marqueeview_text_size="12"
                app:marqueeview_text_speed="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>